--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,8 @@ project("Arena de Desafios")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
 
-find_package(PkgConfig REQUIRED)
-
-pkg_search_module(SFML REQUIRED
-    sfml-graphics
-    sfml-window
-    sfml-system
-)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+find_package(SFML 2 REQUIRED graphics window system)
 
 include_directories("include")
 include_directories(${SFML_INCLUDE_DIRS})
